<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/SettingsLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/settings_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/settings_button_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_general" />

            <Button
                android:id="@+id/settings_button_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_account" />

            <Button
                android:id="@+id/settings_button_call_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_call_stats" />
        </LinearLayout>
    </LinearLayout>
</layout>