<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llAttachment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/theme1_left_bubble_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvVideoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_5dp"
        android:text="@string/my_video"
        android:textColor="@color/txtFontBlack"
        android:textSize="@dimen/text_size_sub_header"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_5dp"
        android:contentDescription="@string/image_template_display"
        android:maxWidth="250dp"
        android:maxHeight="150dp"
        android:src="@drawable/ic_image_photo"
        android:visibility="visible" />

    <com.kore.ui.textview.CustomTextView
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="6dp"
        android:layout_marginEnd="4dp"
        android:background="#44175CD3"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/download"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/llAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@drawable/audio_template_bg"
        android:gravity="center|center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_15dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivAudioPlayPauseIcon"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:contentDescription="@string/audio_play_or_pause_icon"
            android:src="@drawable/selector_play_pause_black" />

        <TextView
            android:id="@+id/tvAudioVideoTiming"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_weight="0"
            android:text="@string/_00_00_00_00"
            android:textColor="@color/txtFontBlack"
            android:textSize="@dimen/text_size_small" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbAudioVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxHeight="@dimen/dimen_3dp"
            android:minHeight="@dimen/dimen_3dp"
            android:progressDrawable="@drawable/seekbar_audio_style"
            android:splitTrack="false"
            android:thumbTint="@color/txtFontBlack" />

        <ImageView
            android:id="@+id/ivAudioMore"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:layout_weight="0"
            android:contentDescription="@string/audio_more_options_for_download"
            android:src="@drawable/ic_more_vert_black_24dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_dfdfeb" />
</LinearLayout>