<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/PermissionDeniedLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/permission_denied_layout_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/permission_denied_button_text"
                style="@style/LoginTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/permission_denied_button_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/permission_denied_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/permission_denied_button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/permission_denied_button_continue" />

            <Button
                android:id="@+id/permission_denied_button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/permission_denied_button_edit" />
        </LinearLayout>
    </LinearLayout>
</layout>