<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/SettingsLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/general_settings_layout_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.kore.ui.textview.CustomTextView
                android:id="@+id/general_settings_textview_dtmf_type"
                style="@style/SettingsTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_settings_textview_dtmf_type_text" />

            <Spinner
                android:id="@+id/general_settings_spinner_dtmf_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:prompt="@string/general_settings_textview_dtmf_type_text" />

            <com.kore.ui.textview.CustomTextView
                android:id="@+id/general_settings_textview_log_level_type"
                style="@style/SettingsTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_settings_textview_log_level_type_text" />

            <Spinner
                android:id="@+id/general_settings_spinner_log_level_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:prompt="@string/general_settings_textview_log_level_type_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kore.ui.textview.CustomTextView
                    android:id="@+id/general_settings_textview_auto_redirect"
                    style="@style/SettingsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/general_settings_textview_auto_redirect_text" />

                <CheckBox
                    android:id="@+id/general_settings_checkbox_auto_redirect"
                    style="@style/SettingsTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/general_settings_layout_redirect_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.kore.ui.textview.CustomTextView
                    android:id="@+id/general_settings_textview_redirect_call"
                    style="@style/SettingsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/general_settings_textview_redirect_call_text" />

                <CheckBox
                    android:id="@+id/general_settings_checkbox_redirect_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/colorAccent" />
            </LinearLayout>

            <EditText
                android:id="@+id/general_settings_edittext_redirect_call"
                style="@style/SettingsTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/general_settings_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/general_settings_button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/general_settings_button_save_text" />
        </LinearLayout>
    </LinearLayout>
</layout>