<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/default_contact_list_picture" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_list_row_layout_contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.kore.ui.textview.CustomTextView
            android:id="@+id/name"
            style="@style/ContactListText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:inputType="textPersonName"
            android:longClickable="false"
            tools:text="@string/name" />

        <com.kore.ui.textview.CustomTextView
            android:id="@+id/phone_number"
            style="@style/ContactListText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:longClickable="false"
            tools:text="@string/_12345678" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/call_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/video_call_image_xml" />
    </LinearLayout>
</LinearLayout>
